Update on Overleaf.

--- a/sigconf.tex
+++ b/sigconf.tex
@@ -83,7 +83,13 @@ There are several examples of using a single set of embeddings for several downs
 There can be several approaches which can be used to encode a sequence of events as a fixed-size vector. One possible approach is to use the recurrent network as in \cite{Sutskever:2014:SSL:2969033.2969173}. The other approach is to use the encoder part of the Transformer architecture presented in \cite{DBLP:journals/corr/VaswaniSPUJGKP17}. In both cases the output produced for the last event can be used to represent the whole series of events.
 
 \section{Experiments} \label{sec-exp}
-\subsection{Tasks} \label{sec-tasks}
+
+
+\subsection{Datasets} \label{sec-datasets}
+
+\textbf{DataLike}\footnote{https://vc.ru/data-like}, a story like prediction competition.
+
+\textbf{Age prediction competition}\footnote{https://onti.ai-academy.ru/competition}, a competition of using bank transactions for age prediction.
 
 \section{Results}
 
