Update on Overleaf.

--- a/sigconf.bib
+++ b/sigconf.bib
@@ -28,10 +28,10 @@
 }
 
 @inproceedings{Wu2017StarSpaceEA,
-  title={StarSpace: Embed All The Things!},
-  author={Ledell Yu Wu and Adam Fisch and Sumit Chopra and Keith Adams and Antoine Bordes and Jason Weston},
-  booktitle={AAAI},
-  year={2017}
+  title={Starspace: Embed all the things!},
+  author={Wu, Ledell Yu and Fisch, Adam and Chopra, Sumit and Adams, Keith and Bordes, Antoine and Weston, Jason},
+  booktitle={Thirty-Second AAAI Conference on Artificial Intelligence},
+  year={2018}
 }
 
 @inproceedings{reimers-2019-sentence-bert,
@@ -42,6 +42,42 @@
     year = "2019",
     publisher = "Association for Computational Linguistics",
     url = "http://arxiv.org/abs/1908.10084",
+}
+
+
+@article{Yi:2014:LUE:1407.4979,
+author = {Yi, Dong and Lei, Zhen and Li, Stan},
+year = {2014},
+month = {07},
+pages = {},
+title = {Deep Metric Learning for Practical Person Re-Identification},
+journal = {Proceedings - International Conference on Pattern Recognition},
+doi = {10.1109/ICPR.2014.16}
+}
+
+@inproceedings{wu2017sampling,
+  title={Sampling matters in deep embedding learning},
+  author={Wu, Chao-Yuan and Manmatha, R and Smola, Alexander J and Krahenbuhl, Philipp},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={2840--2848},
+  year={2017}
+}
+
+@inproceedings{Hoffer:2015:LUE:1412.6622,
+author = {Hoffer, Elad and Ailon, Nir},
+year = {2014},
+month = {12},
+pages = {},
+title = {Deep Metric Learning Using Triplet Network},
+doi = {10.1007/978-3-319-24261-3_7}
+}
+
+@article{histogram-loss,
+author = {Ustinova, Evgeniya and Lempitsky, Victor},
+year = {2016},
+month = {11},
+pages = {},
+title = {Learning Deep Embeddings with Histogram Loss}
 }
 
 @article{Song2017LearningUE,
@@ -135,4 +171,180 @@
   author={Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
   booktitle={NAACL-HLT},
   year={2019}
+}
+
+@inproceedings{ELMO2018,
+author = {Peters, Matthew and Neumann, Mark and Iyyer, Mohit and Gardner, Matt and Clark, Christopher and Lee, Kenton and Zettlemoyer, Luke},
+year = {2018},
+month = {01},
+pages = {2227-2237},
+title = {Deep Contextualized Word Representations},
+doi = {10.18653/v1/N18-1202}
+}
+
+@inproceedings{word2vec,
+author = {Mikolov, Tomas and Corrado, G.s and Chen, Kai and Dean, Jeffrey},
+year = {2013},
+month = {01},
+pages = {1-12},
+title = {Efficient Estimation of Word Representations in Vector Space}
+}
+
+@article{DBLP:journals/corr/abs-1905-11786,
+  author    = {Sindy L{\"{o}}we and
+               Peter O'Connor and
+               Bastiaan S. Veeling},
+  title     = {Greedy InfoMax for Biologically Plausible Self-Supervised Representation
+               Learning},
+  journal   = {CoRR},
+  volume    = {abs/1905.11786},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1905.11786},
+  archivePrefix = {arXiv},
+  eprint    = {1905.11786},
+  timestamp = {Mon, 03 Jun 2019 13:42:33 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1905-11786},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/corr/abs-1807-03748,
+  author    = {A{\"{a}}ron van den Oord and
+               Yazhe Li and
+               Oriol Vinyals},
+  title     = {Representation Learning with Contrastive Predictive Coding},
+  journal   = {CoRR},
+  volume    = {abs/1807.03748},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1807.03748},
+  archivePrefix = {arXiv},
+  eprint    = {1807.03748},
+  timestamp = {Mon, 13 Aug 2018 16:48:25 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1807-03748},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{hjelm2018learning,
+    title={Learning deep representations by mutual information estimation and maximization},
+    author={R Devon Hjelm and Alex Fedorov and Samuel Lavoie-Marchildon and Karan Grewal and Phil Bachman and Adam Trischler and Yoshua Bengio},
+    year={2018},
+    eprint={1808.06670},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
+@misc{jing2019selfsupervised,
+    title={Self-supervised Visual Feature Learning with Deep Neural Networks: A Survey},
+    author={Longlong Jing and Yingli Tian},
+    year={2019},
+    eprint={1902.06162},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
+}
+
+
+@article{Poole2018,
+  title={On variational lower bounds of mutual information},
+  author={Ben Poole and Ozair Sherjil and A{\"{a}}ron van den Oord and Alexander A. Alemi and George Tucker},
+  journal={In NeurIPS Workshop on Bayesian Deep Learning},
+  year={2018},
+  pages={}
+}
+
+@article{Mao2019AdvRobust,
+  title={Metric learning for adversarial robustness},
+  author={Chengzhi Mao and Ziyuan Zhong and Junfeng Yang and Carl Vondrick and Baishakhi Ray},
+  journal={In Advances in Neural Information Processing Systems},
+  year={2019},
+  pages={478--489}
+}
+
+@misc{wan2017generalized,
+    title={Generalized End-to-End Loss for Speaker Verification},
+    author={Li Wan and Quan Wang and Alan Papir and Ignacio Lopez Moreno},
+    year={2017},
+    eprint={1710.10467},
+    archivePrefix={arXiv},
+    primaryClass={eess.AS}
+}
+
+@inproceedings{10.1145/3292500.3330693,
+author = {Babaev, Dmitrii and Savchenko, Maxim and Tuzhilin, Alexander and Umerenkov, Dmitrii},
+title = {E.T.-RNN: Applying Deep Learning to Credit Loan Applications},
+year = {2019},
+isbn = {9781450362016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3292500.3330693},
+doi = {10.1145/3292500.3330693},
+booktitle = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining},
+pages = {2183–2190},
+numpages = {8},
+keywords = {card transactions, recurrent neural networks, credit scoring, multivariate time-series},
+location = {Anchorage, AK, USA},
+series = {KDD ’19}
+}
+
+@misc{mancisidor2019learning,
+    title={Learning Latent Representations of Bank Customers With The Variational Autoencoder},
+    author={Rogelio A Mancisidor and Michael Kampffmeyer and Kjersti Aas and Robert Jenssen},
+    year={2019},
+    eprint={1903.06580},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
+@misc{baldassini2018client2vec,
+    title={client2vec: Towards Systematic Baselines for Banking Applications},
+    author={Leonardo Baldassini and Jose Antonio Rodríguez Serrano},
+    year={2018},
+    eprint={1802.04198},
+    archivePrefix={arXiv},
+    primaryClass={stat.ML}
+}
+
+@misc{doan2019generating,
+    title={Generating Realistic Sequences of Customer-level Transactions for Retail Datasets},
+    author={Thang Doan and Neil Veira and Saibal Ray and Brian Keng},
+    year={2019},
+    eprint={1901.05577},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
+@incollection{NIPS2017_6907,
+title = {LightGBM: A Highly Efficient Gradient Boosting Decision Tree},
+author = {Ke, Guolin and Meng, Qi and Finley, Thomas and Wang, Taifeng and Chen, Wei and Ma, Weidong and Ye, Qiwei and Liu, Tie-Yan},
+booktitle = {Advances in Neural Information Processing Systems 30},
+editor = {I. Guyon and U. V. Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+pages = {3146--3154},
+year = {2017},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/6907-lightgbm-a-highly-efficient-gradient-boosting-decision-tree.pdf}
+}
+
+@article{friedman2001,
+author = "Friedman, Jerome H.",
+doi = "10.1214/aos/1013203451",
+fjournal = "The Annals of Statistics",
+journal = "Ann. Statist.",
+month = "10",
+number = "5",
+pages = "1189--1232",
+publisher = "The Institute of Mathematical Statistics",
+title = "Greedy function approximation: A gradient boosting 			 machine.",
+url = "https://doi.org/10.1214/aos/1013203451",
+volume = "29",
+year = "2001"
+}
+
+@inproceedings{10.5555/3045118.3045167,
+author = {Ioffe, Sergey and Szegedy, Christian},
+title = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+year = {2015},
+publisher = {JMLR.org},
+booktitle = {Proceedings of the 32nd International Conference on International Conference on Machine Learning - Volume 37},
+pages = {448–456},
+numpages = {9},
+location = {Lille, France},
+series = {ICML’15}
 }
