Update on Overleaf.

--- a/sigconf.bib
+++ b/sigconf.bib
@@ -63,6 +63,28 @@ doi = {10.1109/ICPR.2014.16}
   year={2017}
 }
 
+@article{kingma2013auto,
+  title={Auto-encoding variational bayes},
+  author={Kingma, Diederik P and Welling, Max},
+  journal={arXiv preprint arXiv:1312.6114},
+  year={2013}
+}
+
+@techreport{rumelhart1985learning,
+  title={Learning internal representations by error propagation},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  year={1985},
+  institution={California Univ San Diego La Jolla Inst for Cognitive Science}
+}
+
+@inproceedings{doersch2015unsupervised,
+  title={Unsupervised visual representation learning by context prediction},
+  author={Doersch, Carl and Gupta, Abhinav and Efros, Alexei A},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={1422--1430},
+  year={2015}
+}
+
 @inproceedings{Hoffer:2015:LUE:1412.6622,
 author = {Hoffer, Elad and Ailon, Nir},
 year = {2014},
@@ -112,6 +134,14 @@ title = {Learning Deep Embeddings with Histogram Loss}
   journal={2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   year={2015},
   pages={815-823}
+}
+
+@inproceedings{simo2015discriminative,
+  title={Discriminative learning of deep convolutional feature point descriptors},
+  author={Simo-Serra, Edgar and Trulls, Eduard and Ferraz, Luis and Kokkinos, Iasonas and Fua, Pascal and Moreno-Noguer, Francesc},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={118--126},
+  year={2015}
 }
 
 @inproceedings{Hadsell:2006:DRL:1153171.1153654,
@@ -276,7 +306,7 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3292500.3330693},
 doi = {10.1145/3292500.3330693},
-booktitle = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining},
+booktitle = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
 pages = {2183–2190},
 numpages = {8},
 keywords = {card transactions, recurrent neural networks, credit scoring, multivariate time-series},
@@ -347,4 +377,11 @@ pages = {448–456},
 numpages = {9},
 location = {Lille, France},
 series = {ICML’15}
+}
+
+@article{cho2014learning,
+  title={Learning phrase representations using RNN encoder-decoder for statistical machine translation},
+  author={Cho, Kyunghyun and Van Merri{\"e}nboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1406.1078},
+  year={2014}
 }
