--- a/sigconf.tex
+++ b/sigconf.tex
@@ -5,6 +5,8 @@
 
 \usepackage{todonotes}
 
+\usepackage[ruled,vlined]{algorithm2e}
+
 %% \BibTeX command to typeset BibTeX logo in the docs
 \AtBeginDocument{%
   \providecommand\BibTeX{{%
@@ -47,9 +49,9 @@ Constructing semantically meaningful embeddings from a huge amount of unlabelled
 
 \section{Introduction}
 
-Self-supervised learning have demonstrated effectiveness in different machine learning domains, such as natural language processing (e. g. ELMO\cite{ELMO2018}, BERT\cite{Devlin2019BERTPO} and others) or computer vision. \todo[inline]{references} The key advantage of self-supervised learning vs supervised learning is that it doesn't require a target, which allows us to use unlabelled or partially labeled datasets. Knowledge, obtained through self-supervised learning, can be transferred to the downstream task via embedding extraction (\cite{word2vec}) or fine-tuning (\cite{Devlin2019BERTPO}).
+Self-supervised learning have demonstrated effectiveness in different machine learning domains, such as natural language processing (e. g. ELMO\cite{ELMO2018}, BERT\cite{Devlin2019BERTPO} and others) or computer vision (\cite{doersch2015unsupervised}). The key advantage of self-supervised learning vs supervised learning is that it doesn't require a target, which allows us to use unlabelled or partially labeled datasets. Knowledge, obtained through self-supervised learning, can be transferred to the downstream task via embedding extraction (\cite{word2vec}) or fine-tuning (\cite{Devlin2019BERTPO}).
 
-In this paper we present a novel method for self-supervised encoding of event sequences (livestream data), such as card transactions or internet site visits (clickstream). Our method is based on metric learning approach, which originally was proposed for mapping images to a high dimensional feature space.\todo[inline]{references}
+In this paper we present a novel method for self-supervised encoding of event sequences (livestream data), such as card transactions or internet site visits (clickstream). Our method is based on metric learning approach, which originally was proposed for mapping images to a high dimensional feature space.
 
 Metric learning approach learns high-dimensional vector embedding space representing semantically similar objects (image, video, audio, etc.) closer together while dissimilar ones further. Notion of semantic similarity as well as dissimilarity requires underlying domain knowledge and human labor-intensive labeling process to constrain positive and negative examples. 
 
@@ -61,36 +63,30 @@ We evaluated our method by first training the metric learning model on the two p
 
 Moreover, we show superiority of our embeddings over supervised approach on partially labeled data due to insufficient amount of the target to learn a deep model from scratch (see Section \ref{sec-semi}).
 
-The rest of the paper is organised as follows. In Section \ref{sec-rel-work} we discuss the related work. In Section \ref{sec-method} we describe the proposed method. In Section \ref{sec-exp} we present our experiments and in Section \ref{sec-res}  the results of these experiments. Section \ref{sec-conclusions} is dedicated to the discussion of our results and conclusions.
+Our contributions are as follows:
+\begin{enumerate}
+    \item The proposed method outperforms others by the large margin for both supervised and semi-supervised learning on live-steam data.
+    \item The proposed method produces embeddings that achieve strong performance, close to performance on manually crafted features when used on down-stream classification tasks on live-steam data.
+\end{enumerate}
+
+We provide the full code used for experiments described in the article\footnote{https://bitbucket.org/dllllb/dltranz}.
 
 \section{Related work}  \label{sec-rel-work}
 
 We propose a method that uses metric learning approach as a self-supervised learning method for the live-stream domain. Metric learning have been widely used in different domains before, but to the best of our knowledge it has not been applied to the live-stream data for self-supervised learning task. Thus we will now consider related work in the aspects of self-supervised learning, metric learning and live-stream data representation learning related methods.
 
-Recently, an approach to self-supervised learning for sequential data is proposed in \cite{DBLP:journals/corr/abs-1807-03748}. Another approach where representations are learned by maximizing the mutual information between global and local features is proposed by \cite{hjelm2018learning}. In computer vision there are many different approaches to self-supervised learning summarized in \cite{jing2019selfsupervised}. 
+Recently, an approach to self-supervised learning for sequential data is proposed in \cite{DBLP:journals/corr/abs-1807-03748}. Another approach where representations are learned by maximizing the mutual information between global and local features is proposed by \cite{hjelm2018learning}. In computer vision there are many different approaches to self-supervised learning summarized in \cite{jing2019selfsupervised}.
 
 Almost every self-supervised learning approach can be reused for the representation learning in the form of embeddings. There are several examples of using a single set of embeddings for several downstream tasks \cite{Song2017LearningUE}, \cite{Zhai:2019:LUE:3292500.3330739}.
 Embeddings have long history of successful usage in NLP applications to represent documents as a fixed-length vectors. There are some efforts to generalize embeddings approaches for more broad cases \cite{Wu2017StarSpaceEA}.
+
+A common approach to learn self-supervised representations is either traditional autoencoder (\cite{rumelhart1985learning}) or variational autoencoder (\cite{kingma2013auto}). It is widely used for images, text and audio or aggregated live-stream data (\cite{mancisidor2019learning}), but to best of our knowledge it is not used for the raw live-stream data due to the challenges of defining distance between the input and the reconstructed input.
 
 Metric learning has a long history of applications in image and audio domains. Metric learning approach for imaging was proposed in \cite{Hadsell:2006:DRL:1153171.1153654}. 
 Deep Metric learning is the often used for face recognition \cite{Schroff2015FaceNetAU}, \cite{kaya2019deep}. Recently, metric learning was applied to increase the robustness of images representation to adversarial attacks \cite{Mao2019AdvRobust}. Also, metric learning is the popular approach for speaker verification task \cite{wan2017generalized}.
 In the recent publication \cite{reimers-2019-sentence-bert} BERT-based model \cite{Devlin2019BERTPO} trained using metric learning loss is used for different NLP tasks.
 
 To the best of our knowledge, live-stream representation learning is usually performed on aggregated data as in \cite{baldassini2018client2vec}, \cite{mancisidor2019learning}, \cite{doan2019generating}, thus extracted knowledge is limited.  
-\todo[inline]{
-Learning Latent Representations of Bank Customers With The Variational Autoencoder
- \cite{mancisidor2019learning}}
-\todo[inline]{Not forget about the existence of generative models of event series like HMM and etc. See papers about prediction of clickstreams, queries, browsing trails/paths, and etc.}
-\todo[inline]{In many different domains of human life, event streams have frequent patterns ("Stream Prediction Using A Generative Model Based On Frequent Episodes In Event Sequences")}
-
-
-
-
-
-
-
-
-
 
 \section{Our method} \label{sec-method}
 
@@ -134,10 +130,11 @@ Another example of live-streem data is the clickstream: the log of internet reso
 
 \subsection{General framework}
 
-Given a sequence of discrete events $\{x_t \}^n_{t=1}$ in a given observation interval [0, T]
-the ultimate goal is to learn a sequence embedding $f(x_t)$ in the latent space $R^d$ using a metric learning approach such that the distance between embeddings of the same class (positive pairs) is small, whereas of the different class (negative pairs) is large. The details of the metric learning loss are described in section \ref{sec-ml-loss}, the details of the positive pairs generation strategies are described in section \ref{sec-pos-pairs} and details of the negative pairs sampling strategy is described in section \ref{sec-neg-samples}.
+Given a sequence of discrete events $\{x_t \}^n_{t=1}$ in a given observation interval [0, T] the ultimate goal is to obtain a sequence embedding $c_t$ in the latent space $R^d$ using a metric learning approach such that the distance between embeddings of the same class (positive pairs) is small, whereas of the different class (negative pairs) is large. Embedding $c_t$ is generated by encoder neural network which is described in section \ref{sec-enc-arch}.
 
-\todo[inline]{check text, add link to encoder architecture section}
+The details of the metric learning loss are described in section \ref{sec-ml-loss}, the details of the positive pairs generation strategies are described in section \ref{sec-pos-pairs} and details of the negative pairs sampling strategy is described in section \ref{sec-neg-samples}.
+
+\todo[inline]{insert architecture + loss image}
 
 Sequence embedding obtained by the metric learning approach is then used in various donwstream machine learning tasks as a feature vector. Also a common practice to improve the downstream task performance is to feed a pre-trained sequence embedding (the last layer of RNN) to a task-specific classification layer and then jointly fine tune the model parameters of the metric learning and classifier.
 
@@ -145,19 +142,19 @@ Sequence embedding obtained by the metric learning approach is then used in vari
 
 To embed a sequence of events as the fixed-size vector we use the approach similar to the E.T.-RNN\cite{10.1145/3292500.3330693} transaction encoder proposed in our previous paper. The whole encoder consists from two conceptual parts: the event encoder and the sequence encoder.
 
-The event encoder takes attributes of a single event and outputs its representation in the latent space Z: $z_t = e(x_t)$. The sequence encoder takes latent representations of the sequence of events: $ z_{1:t} = z_1, z_2, \cdots z_t $ and outputs the representation of the whole sequence $c_t$ in the time-step t: $ c_t = s(z_{1:t}) $.
+The event encoder $e$ takes attributes of a single event and outputs its representation in the latent space Z: $z_t = e(x_t)$. The sequence encoder $s$ takes latent representations of the sequence of events: $ z_{1:t} = z_1, z_2, \cdots z_t $ and outputs the representation of the whole sequence $c_t$ in the time-step t: $ c_t = s(z_{1:t}) $.
 
 The event encoder consists from the several embedding layers and batch normalization \cite{10.5555/3045118.3045167} layer. Separate embedding layer is used to encode each categorical attribute an event. Batch normalization is applied to numerical attributes of a event. Finally, outputs of the every embedding layer and batch normalization layer are concatenated to produce the latent representation of the single event.
 
 There can be several approaches which can be used to encode a sequence of event representation $z_{1:t}$ as a fixed-size vector $c_t$. One possible approach is to use the recurrent network as in \cite{Sutskever:2014:SSL:2969033.2969173}. The other approach is to use the encoder part of the Transformer architecture presented in \cite{DBLP:journals/corr/VaswaniSPUJGKP17}. In both cases the output produced for the last event can be used to represent the whole series of events.
 
-Encoder, based on RNN-like architectures like GRU\todo[inline]{put link}, allows to update embeddings when new events are received without recalculating embeddings for the past events: $c_k = rnn(c_t, z_{t+1:k})$. This is possible due to the recurrent nature of RNN-like networks.
+Encoder, based on RNN-like architectures like GRU\cite{cho2014learning}, allows to update embeddings when new events are received without recalculating embeddings for the past events: $c_k = rnn(c_t, z_{t+1:k})$. This is possible due to the recurrent nature of RNN-like networks.
 
 \subsection{Metric learning losses} \label{sec-ml-loss}
 
-Metric learning loss discriminates embeddings such that embeddings from similar class are moved closer together and embeddings from the different class are moved further. Several metric learning losses have been considered - Contrastive Loss \cite{Hadsell:2006:DRL:1153171.1153654}, Binomial Deviance Loss \cite{Yi:2014:LUE:1407.4979}, Triplet Loss \cite{Hoffer:2015:LUE:1412.6622}, Histogram Loss \cite{histogram-loss} and Margin Loss \cite{wu2017sampling}. All of this losses address the following challenge of the metric learning approach: using all pairs of samples is inefficient, for example, some of the negative pairs are already distant enough thus this pairs are not valuable for the training (\todo[inline]{links to several papers about hard negatives})\cite{Schroff2015FaceNetAU},.
+Metric learning loss discriminates embeddings such that embeddings from similar class are moved closer together and embeddings from the different class are moved further. Several metric learning losses have been considered - Contrastive Loss \cite{Hadsell:2006:DRL:1153171.1153654}, Binomial Deviance Loss \cite{Yi:2014:LUE:1407.4979}, Triplet Loss \cite{Hoffer:2015:LUE:1412.6622}, Histogram Loss \cite{histogram-loss} and Margin Loss \cite{wu2017sampling}. All of this losses address the following challenge of the metric learning approach: using all pairs of samples is inefficient, for example, some of the negative pairs are already distant enough thus this pairs are not valuable for the training (\cite{simo2015discriminative}, \cite{wu2017sampling}, \cite{Schroff2015FaceNetAU}).
 
-We conducted experiments with all the losses given above and did not find any quality difference in the downstream tasks (see Section \ref{sec-ml-loss}). Thus we fixed the Contrastive loss for further experiments due to its computational simplicity.
+We conducted experiments with all the losses given above and did not find significant quality difference in the downstream tasks (see Table \ref{tab-loss-type}). Thus we fixed the Contrastive loss for further experiments due to its computational simplicity.
 
 Contrastive Loss has a contrastive term for the negative pair of embeddings which penalizes metric learning net only if the negative pair is not distant enough and the distance between embeddings is less than the margin $m$:  
 \begin{equation}
@@ -171,26 +168,58 @@ We need to compute pair-wise distance between all possible pairs of embedding ve
 
 \subsection{Negative sampling} \label{sec-neg-samples}
 
-Only part of possible negative pairs are considered during loss calculation. There are several possible strategies of selecting most relevant negative pairs.
+Negative sampling is another way to address the issue that some of the negative pairs are already distant enough thus this pairs are not valuable for the training (\cite{simo2015discriminative}, \cite{wu2017sampling}, \cite{Schroff2015FaceNetAU}). Hence, only part of possible negative pairs are considered during loss calculation. There are several possible strategies of selecting most relevant negative pairs.
 
-Random sample of negative pairs
-
-Hard negative mining: generate k hardest negative pairs for each positive pair.
-
-Distance weighted sampling: weight samples according to distance \todo[inline]{Distance Weighted Sampling "Sampling Matters in Deep Embedding Learning", ICCV 2017}
-
-Semi-hard sampling: FaceNet\cite{Schroff2015FaceNetAU}
-
-The experiments on different negative pairs selection strategy are provided in Section \ref{sec-exp-neg-sampling}.
+\todo[inline]{provide correct description for 3 and 4}
+\begin{enumerate}
+    \item Random sample of negative pairs
+    \item Hard negative mining: generate k hardest negative pairs for each positive pair.
+    \item Distance weighted sampling: weight samples according to distance \cite{wu2017sampling}
+    \item Semi-hard sampling: FaceNet\cite{Schroff2015FaceNetAU} 
+\end{enumerate}
 
 \subsection{Positive pairs generation} \label{sec-pos-pairs}
 
 Since our method does not use any labelling we sample positive pairs as sub-sequences of the same of sequence discrete events and negative pairs as sub-sequences from the different sequences.
 
-We tried several strategies of sub-sequence generation. The simplest strategy is the random sampling without replacement. Another strategy is to produce a sub-sequence from several randomly selected ranges of events without intersection between ranges. The third option is to use randomly selected ranges of events with possible intersection between ranges. \todo[inline]{insert exact algorithms}
-The order of events in generated sub-sequences is always preserved.
+We tried several strategies of sub-sequence generation. The simplest strategy is the random sampling without replacement. Another strategy is to produce a sub-sequence from several randomly selected slices of events without intersection between slices (see Algorithm \ref{alg-disj-ss}). The third option is to use randomly selected slices of events with possible intersection between slices (see Algorithm \ref{alg-slce-ss}). \todo[inline]{insert exact algorithms}
 
-The results of experiments on different sub-sequence generation strategies are provided in Section \ref{sec-exp-pairgen}. We have found that random sampling without replacement have demonstrated best quality on the considered datasets.
+\begin{algorithm}
+\SetAlgoLined
+\KwResult{Write here the result }
+ initialization\;
+ \While{While condition}{
+  instructions\;
+  \eIf{condition}{
+   instructions1\;
+   instructions2\;
+   }{
+   instructions3\;
+  }
+ }
+ \caption{Disjointed slices sub-sample generation strategy}
+\label{alg-disj-ss}
+
+\end{algorithm}
+
+\begin{algorithm}
+\SetAlgoLined
+\KwResult{Write here the result }
+ initialization\;
+ \While{While condition}{
+  instructions\;
+  \eIf{condition}{
+   instructions1\;
+   instructions2\;
+   }{
+   instructions3\;
+  }
+ }
+ \caption{Random slices sub-sample generation strategy}
+\label{alg-slce-ss}
+\end{algorithm}
+
+The order of events in generated sub-sequences is always preserved.
 
 \section{Experiments} \label{sec-exp}
 
@@ -215,7 +244,7 @@ If we did not explicitly mention alternative in our experiments we used contrast
 For all methods hyper-parameters were chosen using random search on 5-fold cross-validation over the train set in point of best out-of-fold performance on train set.
 
 
-\todo[inline]{Provide exact learning rate etc.} The final set of hyper-parameters used for comparison with baselines is provided in the configuration files in the companion code repository.
+\todo[inline]{Provide exact learning rate, batch size etc.} The final set of hyper-parameters used for comparison with baselines is provided in the configuration files in the companion code repository.
 
 For estimation semi-supervised/self-supervised techniques (including our method), we used all transactions including unlabeled data, but except for the test set, as far this methods are suitable for partially labeled datasets, or don't require labels at all.
 
@@ -231,13 +260,11 @@ history.
 We used LightGBM\cite{NIPS2017_6907} implementation of GBM algorithm and
 created nearly \todo[inline]{How many?} hand-crafted features for the application.
 
-\subsubsection{Encoder architecture}
-
 \begin{table}[ht]
 \caption{Comparison of encoder types}
-\begin{tabular}{ | m{10em} |  m{7em} | m7em} | }
+\begin{tabular}{ | m{10em} |  m{7em} | m{7em} | }
 \hline
-\textbf{Econder type} & \textbf{Age; Accuracy $\pm 95\%$}& \textbf{Gender; AUROC $\pm 95\%$} \\
+\textbf{Econder type} & \textbf{Age, accuracy $\pm 95\%$}& \textbf{Gender, AUROC $\pm 95\%$} \\
 \hline
 \textbf{LSTM} & $0.603 \pm 0.006$ & $0.856 \pm 0.004$ \\
 \textbf{GRU} & \pmb{$0.624 \pm 0.005$} & \pmb{$0.868 \pm 0.005$}  \\
@@ -247,10 +274,8 @@ created nearly \todo[inline]{How many?} hand-crafted features for the applicatio
 \label{tab-enc-type}
 \end{table}
 
-\subsubsection{Loss type}
-
 \begin{table}[ht]
-\caption{Comparison of metric learning losses for age prediction task}
+\caption{Comparison of metric learning losses}
 \begin{tabular}{ | m{14em} |  m{5em} | m{5em} |}
 \hline
 \textbf{Loss type} & \textbf{Age, accuracy $\pm 95\%$}& \textbf{Gender , AUROC $\pm 95\%$} \\
@@ -265,10 +290,8 @@ created nearly \todo[inline]{How many?} hand-crafted features for the applicatio
 \label{tab-loss-type}
 \end{table}
 
-\subsubsection{Possible pairs generation approaches} \label{sec-exp-pairgen}
-
 \begin{table}[ht]
-\caption{Comparison of pair generation methods for age prediction task}
+\caption{Comparison of pair generation strategies}
 \begin{tabular}{ | m{14em} |  m{5em} |  m{5em} | }
 \hline
 \textbf{Pair generation method} & \textbf{Age, accuracy $\pm 95\%$} & \textbf{Gender, AUCROC $\pm 95\%$} \\
@@ -278,10 +301,8 @@ created nearly \todo[inline]{How many?} hand-crafted features for the applicatio
 \textbf{Random disjoint samples} & $0.606 \pm 0.005$ & $0.835 \pm 0.001$ \\
 \hline
 \end{tabular}
-\label{tab-loss-type}
+\label{tab-pair-gen}
 \end{table}
-
-\subsubsection{Effect of negative sampling} \label{sec-exp-neg-sampling}
 
 \begin{table}[ht]
 \caption{Comparison of negative sampling strategies for age prediction task}
@@ -294,7 +315,7 @@ created nearly \todo[inline]{How many?} hand-crafted features for the applicatio
 \textbf{Distance weighted sampling} & $0.595 \pm 0.004$ & $0.808 \pm 0.002$ \\
 \hline
 \end{tabular}
-\label{tab-loss-type}
+\label{tab-neg-sampl}
 \end{table}
 
 \subsubsection{Embedding dimensionality trade-off}
@@ -313,6 +334,9 @@ Large embedding sizes would allow to store more
 \subsection{Results} \label{sec-res}
 
 \subsection{Comparison with baselines} \label{sec-res-baselines}
+
+\todo[inline]{insert correct numbers}
+\todo[inline]{insert CPC results}
 
 \begin{table}[ht]
 \caption{Age group prediction results}
@@ -354,15 +378,13 @@ Large embedding sizes would allow to store more
 
 \section{Conclusions} \label{sec-conclusions}
 
-In this paper we proposes a novel method of self-supevised learning for live-stream data. Our method can be used to produce embeddings of complex event sequiences which can be effectively used in different live-stream tasks. Also, our method can be used for pre-training in semi-supervised setting.
+In this paper we proposes a novel method of self-supevised learning for live-stream data. Our method can be used to produce embeddings of complex event sequiences which can be effectively used in various downstream tasks. Also, our method can be used for pre-training in semi-supervised setting.
 
-As we demonstrate in previous section our approach achieves strong performance on several live-stream data tasks. It outperforms both classical machine learning baselines on hand-crafted features and neural network based approaches. In semi-supevised setting, where where the number of labelled data is limited our method demonstrate even stronger results. It outperforms other methods by significant margin.
+As we demonstrate in previous section our approach achieves strong performance on several downstream tasks. It outperforms both classical machine learning baselines on hand-crafted features and neural network based approaches.
 
-Our method of generating embeddings is convenient for production usage. For some encoder achitectures (see Section \ref{sec-enc-arch}
+In semi-supevised setting, where the number of labelled data is limited our method demonstrate even stronger results, it outperforms other methods by significant margin.
 
-\subsection{Embedding updates}
-
-\todo[inline]{Embedding updates}
+Our method of generating embeddings is convenient for production usage. For some encoder architectures (see Section \ref{sec-enc-arch} it is possible to update already calculated embeddings when additional data is arrived.
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{sigconf}
