Update on Overleaf.

--- a/sigconf.bib
+++ b/sigconf.bib
@@ -85,6 +85,15 @@ doi = {10.1109/ICPR.2014.16}
   year={2015}
 }
 
+@inproceedings{lee2013pseudo,
+  title={Pseudo-label: The simple and efficient semi-supervised learning method for deep neural networks},
+  author={Lee, Dong-Hyun},
+  booktitle={Workshop on challenges in representation learning, ICML},
+  volume={3},
+  pages={2},
+  year={2013}
+}
+
 @inproceedings{Hoffer:2015:LUE:1412.6622,
 author = {Hoffer, Elad and Ailon, Nir},
 year = {2014},
