--- a/sigconf.tex
+++ b/sigconf.tex
@@ -5,6 +5,9 @@
 
 \usepackage{todonotes}
 
+% for multi-line table cells
+\usepackage{makecell}
+
 \usepackage[ruled,vlined]{algorithm2e}
 
 %% \BibTeX command to typeset BibTeX logo in the docs
@@ -49,24 +52,24 @@ Constructing semantically meaningful embeddings from a huge amount of unlabelled
 
 \section{Introduction}
 
-Self-supervised learning have demonstrated effectiveness in different machine learning domains, such as natural language processing (e. g. ELMO\cite{ELMO2018}, BERT\cite{Devlin2019BERTPO} and others) or computer vision (\cite{doersch2015unsupervised}). The key advantage of self-supervised learning vs supervised learning is that it doesn't require a target, which allows us to use unlabelled or partially labeled datasets. Knowledge, obtained through self-supervised learning, can be transferred to the downstream task via embedding extraction (\cite{word2vec}) or fine-tuning (\cite{Devlin2019BERTPO}).
+Self-supervised learning have demonstrated effectiveness in different machine learning domains, such as natural language processing (e. g. ELMO\cite{ELMO2018}, BERT\cite{Devlin2019BERTPO}) or computer vision (\cite{doersch2015unsupervised}). The key advantage of self-supervised learning vs supervised learning is that it doesn't require a target, which allows us to use unlabelled or partially labeled datasets. Knowledge, obtained through self-supervised learning, can be transferred to the downstream task via embedding extraction (\cite{word2vec}) or fine-tuning (\cite{Devlin2019BERTPO}).
 
-In this paper we present a novel method for self-supervised encoding of event sequences (livestream data), such as card transactions or internet site visits (clickstream). Our method is based on metric learning approach, which originally was proposed for mapping images to a high dimensional feature space.
+In this paper we present a novel method for self-supervised encoding of user' event sequences (livestream data), such as card transactions or internet site visits (clickstream). Our method is based on metric learning approach, which originally was proposed for mapping images to a high dimensional feature space.
 
-Metric learning approach learns high-dimensional vector embedding space representing semantically similar objects (image, video, audio, etc.) closer together while dissimilar ones further. Notion of semantic similarity as well as dissimilarity requires underlying domain knowledge and human labor-intensive labeling process to constrain positive and negative examples. 
+Metric learning approach learns high-dimensional vector embedding space representing semantically similar objects (image, video, audio, etc.) closer together while dissimilar ones further. Notion of semantic similarity as well as dissimilarity requires underlying domain knowledge and human labor-intensive labeling process to constrain positive and negative examples. Yet such approaches are dedicated to the key domains such as: speech, images, text, video and reinforcement learning in 3D environments. To the best of our knowledge metric learning has not been applied to livestream data domain, such as client transactions, web clickstream or related domain due to the customer privacy and lack of publicly available datasets. The key property of the livestream data domain is periodicity and repeatability of the events in the sequence. We propose our method with this key difference in mind.
 
-Recent work on unsupervised representation learning \todo[inline]{put links} tackles this issues and learns similarities without labeled instances. Yet such approaches are dedicated to the key domains such as: speech, images, text, video and reinforcement learning in 3D environments. To the best of our knowledge metric learning has not been applied to live-stream data domain, such as client transactions, web click-stream or related domain due to the customer privacy and lack of publicly available datasets. The key property of the live-stream data domain is periodicity and repeatability of the sequence elements. We propose our method with this key difference in mind.
+Our method learns low-dimentional embeddings from user' sequential data sampling positive pairs as sub-sequences of the same user' sequence and negative pairs as sub-sequences from the different user' sequences.
 
-Our method learns low-dimentional embeddings from sequential data sampling positive pairs as sub-sequences of the same sequence and negative pairs as sub-sequences from the different sequences.
-
-We evaluated our method by first training the metric learning model on the two public bank transactions datasets with self-supervised learning, and then either use the representation in the downstream classification task and finetuning the representation within a downstream task. Our metric learning model pre-trained representations achieve state-of-the-art performance on both bank transactions datasets (see Section \ref{sec-res-baselines}), outperforming all previous learning methods by a significant margin.
+We initially trained the model in self-supervised way on public datasets with bank transactions and then we evaluated our method either using the representation as features in the downstream task or fine-tuning the representation within a downstream task. Our metric learning self-supervised 
+representations achieve strong performance comparable to other methods and  fine-tuned representations achieve state-of-the-art performance on both bank transactions datasets (see Section \ref{sec-res-baselines}), outperforming all previous learning methods by a significant margin.
 
 Moreover, we show superiority of our embeddings over supervised approach on partially labeled data due to insufficient amount of the target to learn a deep model from scratch (see Section \ref{sec-semi}).
 
 Our contributions are as follows:
 \begin{enumerate}
-    \item The proposed method outperforms others by the large margin for both supervised and semi-supervised learning on live-steam data.
-    \item The proposed method produces embeddings that achieve strong performance, close to performance on manually crafted features when used on down-stream classification tasks on live-steam data.
+    \item We propose an approach of synthetic generation of positive pairs to apply a metric learning on unlabeled livestream data
+    \item The proposed method outperforms others by the large margin for both supervised and semi-supervised learning on livestream data
+    \item The proposed method produces embeddings that achieve strong performance, close to performance on manually crafted features when used on downstream classification tasks on livesteam data
 \end{enumerate}
 
 We provide the full code used for experiments described in the article\footnote{https://bitbucket.org/dllllb/dltranz}.
@@ -92,9 +95,10 @@ To the best of our knowledge, live-stream representation learning is usually per
 
 \subsection{Live-stream data}
 
-Life-stream data consists of the stream of events. Each event occurs at a certain time.
+Life-stream data consists of discrete events per user (or other entities) in continuous time, for example, user behavior on websites, credit card transactions, etc. 
 
-For example, live-stream transactional data consists of the credit card transactions, each transaction having several attributes, both categorical and numerical, and occurring at a certain time. The example of transactional data for a single credit card is presented in Table \ref{tab-tr-data}.
+Considering credit card transactions, each transaction occurs at a certain time and have a set of attributes, either categorical or numerical. The example of 
+the sequence of transactions with their attributes is presented in the Table \ref{tab-tr-data}.
 Merchant type field represents the kind of a merchant, such as airline, hotel, restaurant, etc. (note that it is impossible to restore the real merchant organization identifier from this field).
 
 \begin{table}[ht]
@@ -112,7 +116,7 @@ Merchant type field represents the kind of a merchant, such as airline, hotel, r
 \label{tab-tr-data}
 \end{table}
 
-Another example of live-streem data is the clickstream: the log of internet resources visits. The example of a clickstream for a single user is presented in Table \ref{tab-cs-data}.
+Another example of livestream data is clickstream: the log of internet pages  visits. The example of a clickstream log of a single user is presented in Table \ref{tab-cs-data}.
 
 \begin{table}[ht]
 \caption{Clickstream structure for a single user}
@@ -130,25 +134,25 @@ Another example of live-streem data is the clickstream: the log of internet reso
 
 \subsection{General framework}
 
-Given a sequence of discrete events $\{x_t \}^n_{t=1}$ in a given observation interval [0, T] the ultimate goal is to obtain a sequence embedding $c_t$ in the latent space $R^d$ using a metric learning approach such that the distance between embeddings of the same class (positive pairs) is small, whereas of the different class (negative pairs) is large. Embedding $c_t$ is generated by encoder neural network which is described in section \ref{sec-enc-arch}.
+Given a sequence of discrete events $\{x_t \}^T_{t=1}$ in a given observation interval [1, T] the ultimate goal is to obtain a sequence embedding $c_t$ for the timestamp $T$ in the latent space $R^d$. An  embedding $c_t$ obtained using a metric learning approach such that the distance between embeddings of the same user or entity (positive pairs, see section \ref{sec-pos-pairs}) is small, whereas embeddings of the different users or entities (negative pairs) is large. 
 
-The details of the metric learning loss are described in section \ref{sec-ml-loss}, the details of the positive pairs generation strategies are described in section \ref{sec-pos-pairs} and details of the negative pairs sampling strategy is described in section \ref{sec-neg-samples}.
+Embedding $c_t$ is generated by encoder neural network which is described in section \ref{sec-enc-arch}. The details of the metric learning loss are described in section \ref{sec-ml-loss}. The details of the positive pairs generation strategies are described in section \ref{sec-pos-pairs}. The details of the negative pairs sampling strategy is described in section \ref{sec-neg-samples}.
 
 \todo[inline]{insert architecture + loss image}
 
-Sequence embedding obtained by the metric learning approach is then used in various donwstream machine learning tasks as a feature vector. Also a common practice to improve the downstream task performance is to feed a pre-trained sequence embedding (the last layer of RNN) to a task-specific classification layer and then jointly fine tune the model parameters of the metric learning and classifier.
+Sequence embedding $c_t$ obtained by the metric learning approach is then used in various donwstream machine learning tasks as a feature vector. Also a common practice to improve the downstream task performance is to feed a pre-trained embedding $c_t$ (the last layer of RNN) to a task-specific classification layer and then jointly fine-tune the model parameters of the metric learning and classifier.
 
 \subsection{Encoder architecture} \label{sec-enc-arch}
 
-To embed a sequence of events as the fixed-size vector we use the approach similar to the E.T.-RNN\cite{10.1145/3292500.3330693} transaction encoder proposed in our previous paper. The whole encoder consists from two conceptual parts: the event encoder and the sequence encoder.
+To embed a sequence of events as the fixed-size vector $c_t \in R^d$ we use the approach similar to the E.T.-RNN\cite{10.1145/3292500.3330693} transaction encoder proposed in our previous paper. The whole encoder network consists of two conceptual parts: the event encoder and the sequence encoder subnetworks.
 
-The event encoder $e$ takes attributes of a single event and outputs its representation in the latent space Z: $z_t = e(x_t)$. The sequence encoder $s$ takes latent representations of the sequence of events: $ z_{1:t} = z_1, z_2, \cdots z_t $ and outputs the representation of the whole sequence $c_t$ in the time-step t: $ c_t = s(z_{1:t}) $.
+The event encoder $e$ takes the set of attributes of a single event and outputs its representation in the latent space $Z \in R^m$: $z_t = e(x_t)$. The sequence encoder $s$ takes latent representations of the sequence of events: $ z_{1:T} = z_1, z_2, \cdots z_T $ and outputs the representation of the whole sequence $c_t$ in the time-step t: $ c_t = s(z_{1:t}) $.
 
-The event encoder consists from the several embedding layers and batch normalization \cite{10.5555/3045118.3045167} layer. Separate embedding layer is used to encode each categorical attribute an event. Batch normalization is applied to numerical attributes of a event. Finally, outputs of the every embedding layer and batch normalization layer are concatenated to produce the latent representation of the single event.
+The event encoder consists of the several embedding layers and batch normalization\cite{10.5555/3045118.3045167} layer. Each embedding layer is used to encode each categorical attribute of the event. Batch normalization is applied to numerical attributes of the event. Finally, outputs of every embedding layer and batch normalization layer are concatenated to produce the latent representation $z_t$ of the single event.
 
-There can be several approaches which can be used to encode a sequence of event representation $z_{1:t}$ as a fixed-size vector $c_t$. One possible approach is to use the recurrent network as in \cite{Sutskever:2014:SSL:2969033.2969173}. The other approach is to use the encoder part of the Transformer architecture presented in \cite{DBLP:journals/corr/VaswaniSPUJGKP17}. In both cases the output produced for the last event can be used to represent the whole series of events.
+The sequence of latent representations of event representations $z_{1:t}$ is passed to sequence encoder $s$ to obtain a fixed-size vector $c_t$. Several approaches can be used to encode a sequence. One possible approach is to use the recurrent network (RNN) as in \cite{Sutskever:2014:SSL:2969033.2969173}. The other approach is to use the encoder part of the Transformer architecture presented in \cite{DBLP:journals/corr/VaswaniSPUJGKP17}. In both cases the output produced for the last event can be used to represent the whole sequence of events. In case of RNN the last output $h_t$ is a representation of the sequence.
 
-Encoder, based on RNN-like architectures like GRU\cite{cho2014learning}, allows to update embeddings when new events are received without recalculating embeddings for the past events: $c_k = rnn(c_t, z_{t+1:k})$. This is possible due to the recurrent nature of RNN-like networks.
+Encoder, based on RNN-type architecture like GRU\cite{cho2014learning}, allows to calculate embedding $c_{t+k}$ by updating embedding $c_t$ instead of  calculating embedding $c_{t+k}$ from the whole sequence of past events $z_{1:t}$: $c_k = rnn(c_t, z_{t+1:k})$. This is possible due to the recurrent nature of RNN-like networks.
 
 \subsection{Metric learning losses} \label{sec-ml-loss}
 
@@ -248,7 +252,7 @@ For all methods hyper-parameters were chosen using random search on 5-fold cross
 
 For estimation semi-supervised/self-supervised techniques (including our method), we used all transactions including unlabeled data, but except for the test set, as far this methods are suitable for partially labeled datasets, or don't require labels at all.
 
-\subsubsection{Baselines}
+\subsubsection{Baselines} \label{sec-baselines}
 
 To compare metric learning based model with other approaches, we have implemented an
 additional model that is based on the Gradient Boosting Machine
@@ -260,11 +264,15 @@ history.
 We used LightGBM\cite{NIPS2017_6907} implementation of GBM algorithm and
 created nearly \todo[inline]{How many?} hand-crafted features for the application.
 
+\subsubsection{Design choices}
+
+In the following tables we present the results of experiments on different design choices of our method.
+
 \begin{table}[ht]
 \caption{Comparison of encoder types}
 \begin{tabular}{ | m{10em} |  m{7em} | m{7em} | }
 \hline
-\textbf{Econder type} & \textbf{Age, accuracy $\pm 95\%$}& \textbf{Gender, AUROC $\pm 95\%$} \\
+\textbf{Econder type} & \makecell{\textbf{Age,} \\ \textbf{Accuracy $\pm 95\%$}} & \makecell{\textbf{Gender,} \\ \textbf{AUROC $\pm 95\%$}} \\
 \hline
 \textbf{LSTM} & $0.603 \pm 0.006$ & $0.856 \pm 0.004$ \\
 \textbf{GRU} & \pmb{$0.624 \pm 0.005$} & \pmb{$0.868 \pm 0.005$}  \\
@@ -276,9 +284,9 @@ created nearly \todo[inline]{How many?} hand-crafted features for the applicatio
 
 \begin{table}[ht]
 \caption{Comparison of metric learning losses}
-\begin{tabular}{ | m{14em} |  m{5em} | m{5em} |}
+\begin{tabular}{ | m{10em} |  m{7em} | m{7em} |}
 \hline
-\textbf{Loss type} & \textbf{Age, accuracy $\pm 95\%$}& \textbf{Gender , AUROC $\pm 95\%$} \\
+\textbf{Loss type} & \makecell{\textbf{Age,} \\ \textbf{Accuracy $\pm 95\%$}} & \makecell{\textbf{Gender,} \\ \textbf{AUROC $\pm 95\%$}} \\
 \hline
 \textbf{Contractile loss} & \pmb{$0.619 \pm 0.004$} & $0.867 \pm 0.005$ \\
 \textbf{Binomial Deviance loss} & $0.606 \pm 0.003$ & $0.867 \pm 0.002$ \\
@@ -292,9 +300,9 @@ created nearly \todo[inline]{How many?} hand-crafted features for the applicatio
 
 \begin{table}[ht]
 \caption{Comparison of pair generation strategies}
-\begin{tabular}{ | m{14em} |  m{5em} |  m{5em} | }
+\begin{tabular}{ | m{10em} |  m{7em} |  m{7em} | }
 \hline
-\textbf{Pair generation method} & \textbf{Age, accuracy $\pm 95\%$} & \textbf{Gender, AUCROC $\pm 95\%$} \\
+\textbf{Pair generation method} & \makecell{\textbf{Age,} \\ \textbf{Accuracy $\pm 95\%$}} & \makecell{\textbf{Gender,} \\ \textbf{AUROC $\pm 95\%$}} \\
 \hline
 \textbf{Random slices} & \pmb{$0.616 \pm 0.006$} & \pmb{$0.865 \pm 0.004$} \\
 \textbf{Random samples} & $0.608 \pm 0.009$ & $0.847 \pm 0.002$ \\
@@ -305,10 +313,10 @@ created nearly \todo[inline]{How many?} hand-crafted features for the applicatio
 \end{table}
 
 \begin{table}[ht]
-\caption{Comparison of negative sampling strategies for age prediction task}
-\begin{tabular}{ | m{14em} |  m{5em} |  m{5em} | }
+\caption{Comparison of negative sampling strategies}
+\begin{tabular}{ | m{10em} |  m{7em} |  m{7em} | }
 \hline
-\textbf{Negative sampling strategy} & \textbf{Age, accuracy $\pm 95\%$} & \textbf{Gender, AUROC $\pm 95\%$} \\
+\textbf{Negative sampling strategy} & \makecell{\textbf{Age,} \\ \textbf{Accuracy $\pm 95\%$}} & \makecell{\textbf{Gender,} \\ \textbf{AUROC $\pm 95\%$}} \\
 \hline
 \textbf{Hard negative mining} & \pmb{$0.620 \pm 0.004$} & \pmb{$0.860 \pm 0.004$} \\
 \textbf{Random negative sampling} & $0.587 \pm 0.004$ & $0.812 \pm 0.008$ \\
@@ -318,10 +326,6 @@ created nearly \todo[inline]{How many?} hand-crafted features for the applicatio
 \label{tab-neg-sampl}
 \end{table}
 
-\subsubsection{Embedding dimensionality trade-off}
-
-Large embedding sizes would allow to store more
-
 \begin{figure}[ht]
   \caption{Embedding dimensionality vs. quality on downstream tasks}
   \includegraphics[width=0.46\textwidth]{figures/tmp-pic.png}
@@ -329,11 +333,13 @@ Large embedding sizes would allow to store more
 \end{figure}
 
 
-!\todo[inline]{provide plot of embedding dimensionality vs quality}
+\todo[inline]{provide plot of embedding dimensionality vs quality}
 
 \subsection{Results} \label{sec-res}
 
-\subsection{Comparison with baselines} \label{sec-res-baselines}
+\subsubsection{Comparison with baselines} \label{sec-res-baselines}
+
+As shown in Table \ref{tab-age-pred} and Table \ref{tab-sex-pred} our method generates sequence embeddings of livestream data that achieve strong performance, comparable to performance on manually crafted features when used on downstream tasks. Also fine-tuned representations obtained by our method achieve state-of-the-art performance on both bank transactions datasets, outperforming all previous learning methods by a significant margin.
 
 \todo[inline]{insert correct numbers}
 \todo[inline]{insert CPC results}
@@ -344,10 +350,11 @@ Large embedding sizes would allow to store more
 \hline
 \textbf{Method} & \textbf{Accuracy $\pm 95\%$} \\
 \hline
-\textbf{LightGBM on hand-crafted features} & 0.1 \\
-\textbf{LightGBM on Metric Learning embeddings} & 0.1 \\
-\textbf{Supervised learning} & 0.1  \\
-\textbf{Fine-tuning} & 0.1  \\
+\textbf{LightGBM on hand-crafted features} & $0.626 \pm 0.004$ \\
+\textbf{LightGBM on Metric Learning embeddings} & $0.616 \pm 0.006$ \\
+\textbf{LightGBM on both hand-crafted features and Metric Learning embeddings} & $0.632 \pm 0.007$ \\
+\textbf{Supervised learning} & $0.628 \pm 0.010$  \\
+\textbf{Fine-tuning} & \pmb{$0.643 \pm 0.007$}  \\
 \hline
 \end{tabular}
 \label{tab-age-pred}
@@ -359,16 +366,21 @@ Large embedding sizes would allow to store more
 \hline
 \textbf{Method} & \textbf{AUROC $\pm 95\%$} \\
 \hline
-\textbf{LightGBM on hand-crafted features} & 0.1 \\
-\textbf{LightGBM on Metric Learning embeddings} & 0.1 \\
-\textbf{Supervised learning} & 0.1  \\
-\textbf{Fine-tuning} & 0.1  \\
+\textbf{LightGBM on hand-crafted features} & $0.875 \pm 0.004$ \\
+\textbf{LightGBM on Metric Learning embeddings} & $0.865 \pm 0.004$ \\
+\textbf{LightGBM on both hand-crafted features and Metric Learning embeddings} & $0.878 \pm 0.004$ \\
+\textbf{Supervised learning} & $0.871 \pm 0.007$  \\
+\textbf{Fine-tuning} & \pmb{$0.883 \pm 0.003$} \\
 \hline
 \end{tabular}
 \label{tab-sex-pred}
 \end{table}
 
 \subsubsection{Semi-supervised setup} \label{sec-semi}
+
+In semi-supervised setting in addition to baselines (see Section \ref{sec-baselines}) we compared our method with pseudo-labeling (\cite{lee2013pseudo}). We used only part of available target labels for the semi-supervised experiment. As you can see in figure \ref{fig-semi}, the lesser the number of available labels the larger the gap in performance between our method and others.
+
+\todo[inline]{Recreate image with larger fonts}
 
 \begin{figure}[ht]
   \caption{Donwstream task quality for different dataset sizes}
