Update on Overleaf.

--- a/sigconf.bib
+++ b/sigconf.bib
@@ -94,6 +94,8 @@ doi = {10.1109/ICPR.2014.16}
   year={2013}
 }
 
+
+
 @inproceedings{Hoffer:2015:LUE:1412.6622,
 author = {Hoffer, Elad and Ailon, Nir},
 year = {2014},
@@ -392,5 +394,61 @@ series = {ICML’15}
   title={Learning phrase representations using RNN encoder-decoder for statistical machine translation},
   author={Cho, Kyunghyun and Van Merri{\"e}nboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
   journal={arXiv preprint arXiv:1406.1078},
+  year={2014}
+}
+
+@inproceedings{laxman2008stream,
+  title={Stream prediction using a generative model based on frequent episodes in event sequences},
+  author={Laxman, Srivatsan and Tankasali, Vikram and White, Ryen W},
+  booktitle={Proceedings of the 14th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={453--461},
+  year={2008}
+}
+
+@article{cao2019unsupervised,
+  title={Unsupervised Deep Metric Learning via Auxiliary Rotation Loss},
+  author={Cao, Xuefei and Chen, Bor-Chun and Lim, Ser-Nam},
+  journal={arXiv preprint arXiv:1911.07072},
+  year={2019}
+}
+
+@incollection{wiese2009credit,
+  title={Credit card transactions, fraud detection, and machine learning: Modelling time with LSTM recurrent neural networks},
+  author={Wiese, B{\'e}nard and Omlin, Christian},
+  booktitle={Innovations in neural information paradigms and applications},
+  pages={231--268},
+  year={2009},
+  publisher={Springer}
+}
+
+@inproceedings{zhang2017credit,
+  title={Credit risk assessment based on long short-term memory model},
+  author={Zhang, Yishen and Wang, Dong and Chen, Yuehui and Shang, Huijie and Tian, Qi},
+  booktitle={International conference on intelligent computing},
+  pages={700--712},
+  year={2017},
+  organization={Springer}
+}
+
+@article{bigon2019prediction,
+  title={Prediction is very hard, especially about conversion. Predicting user purchases from clickstream data in fashion e-commerce},
+  author={Bigon, Luca and Cassani, Giovanni and Greco, Ciro and Lacasa, Lucas and Pavoni, Mattia and Polonioli, Andrea and Tagliabue, Jacopo},
+  journal={arXiv preprint arXiv:1907.00400},
+  year={2019}
+}
+
+@inproceedings{weinberger2006distance,
+  title={Distance metric learning for large margin nearest neighbor classification},
+  author={Weinberger, Kilian Q and Blitzer, John and Saul, Lawrence K},
+  booktitle={Advances in neural information processing systems},
+  pages={1473--1480},
+  year={2006}
+}
+
+@inproceedings{hu2014discriminative,
+  title={Discriminative deep metric learning for face verification in the wild},
+  author={Hu, Junlin and Lu, Jiwen and Tan, Yap-Peng},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1875--1882},
   year={2014}
 }
