Update on Overleaf.

--- a/sigconf.tex
+++ b/sigconf.tex
@@ -63,7 +63,7 @@ The key property of the method is that it can be applied on unlabelled event seq
 
 {\bf AST: it reads more like an abstract or a one-page summary of the research (bez vodi :-)). USUALLY SUCH (KDD) PAPERS START WITH MOTIVATION OF THE PROBLEM AND ITS IMPORTANCE AND THEN GRADUALLY LEAD TO THE PROBLEM FORMULATION AND THE RESULTS.}
 
-In this paper, we present a novel \emph{Metric Learning for Event Sequences (MeLES)} method for learning low-dimensional representations of event sequences, which copes with specific properties of lifestreams such as their discrete nature. In a broad sense, MeLES method adopts metric learning techniques~\cite{???}. Metric learning is often used in a supervised manner for mapping high-dimensional objects to a low-dimensional embedding space. The aim of metric learning is to represent semantically similar objects (images, video, audio, etc.) closer to each other, while unsimilar ones further. Most metric learning methods are used in such applications as speech recognition, computer vision, text analysis and reinforcement learning in 3D environments. In these domains, metric learning is successfully applied in a supervised manner to datasets, where pairs of high-dimensional instances are labeled as the same object or different ones. 
+In this paper, we present a novel \emph{Metric Learning for Event Sequences (MeLES)} method for learning low-dimensional representations of event sequences, which copes with specific properties of lifestreams such as their discrete nature. In a broad sense, MeLES method adopts metric learning techniques~\cite{???}. Metric learning is often used in a supervised manner for mapping high-dimensional objects to a low-dimensional embedding space. The aim of metric learning is to represent semantically similar objects (images, video, audio, etc.) closer to each other, while dissimilar ones further. Most metric learning methods are used in such applications as speech recognition, computer vision, text analysis and reinforcement learning in 3D environments. In these domains, metric learning is successfully applied in a supervised manner to datasets, where pairs of high-dimensional instances are labeled as the same object or different ones. 
 (*** AST: THE NEXT 2 SENTENCES CONSTITUTE A NICE AND CONCISE DESCRIPTION OF THE PROBLEM. THIS PIECE SHOULD BE KEPT AND INTEGRATED INTO THE PAPER. ***) Unlike all the previous metric learning methods, MeLES is fully self-supervised and does not require any labels. It is based on the observation that lifestream data obeys periodicity and repeatability of events in a sequence. Therefore, one can consider some convenient subsequences of the same lifestream as auxiliary high-dimensional representations of the same person. The idea of MeLES is that low-dimensional embeddings of such subsequences should be closer to each other.
 
 
