Update on Overleaf.

--- a/sigconf.tex
+++ b/sigconf.tex
@@ -303,7 +303,7 @@ The final set of hyper-parameters used for MeLES is shown in the Table\ref{tab-h
 \label{tab-hyper}
 \end{table}
 
-For evaluation of semi-supervised/self-supervised techniques (including MeLES), we used all transactions including unlabeled data, but except for the test set, as far this methods are suitable for partially labeled datasets, or don't require labels at all.
+For evaluation of semi-supervised/self-supervised techniques (including MeLES), we used all transactions including unlabeled data, but except for the test set, as far as this methods are suitable for partially labeled datasets, or don't require labels at all.
 
 \subsubsection{Performance}
 
