Update on Overleaf.

--- a/sigconf.bib
+++ b/sigconf.bib
@@ -452,3 +452,72 @@ series = {ICML’15}
   pages={1875--1882},
   year={2014}
 }
+
+@inproceedings{xing2003distance,
+  title={Distance metric learning with application to clustering with side-information},
+  author={Xing, Eric P and Jordan, Michael I and Russell, Stuart J and Ng, Andrew Y},
+  booktitle={Advances in neural information processing systems},
+  pages={521--528},
+  year={2003}
+}
+
+@article{maaten2008visualizing,
+  title={Visualizing data using t-SNE},
+  author={Maaten, Laurens van der and Hinton, Geoffrey},
+  journal={Journal of machine learning research},
+  volume={9},
+  number={Nov},
+  pages={2579--2605},
+  year={2008}
+}
+
+@inproceedings{chopra2005learning,
+  title={Learning a similarity metric discriminatively, with application to face verification},
+  author={Chopra, Sumit and Hadsell, Raia and LeCun, Yann},
+  booktitle={2005 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR'05)},
+  volume={1},
+  pages={539--546},
+  year={2005},
+  organization={IEEE}
+}
+
+@article{niu2019comparison,
+  title={A comparison study of credit card fraud detection: Supervised versus unsupervised},
+  author={Niu, Xuetong and Wang, Li and Yang, Xulei},
+  journal={arXiv preprint arXiv:1904.10604},
+  year={2019}
+}
+
+
+@article{wu2010adapting,
+  title={Adapting boosting for information retrieval measures},
+  author={Wu, Qiang and Burges, Christopher JC and Svore, Krysta M and Gao, Jianfeng},
+  journal={Information Retrieval},
+  volume={13},
+  number={3},
+  pages={254--270},
+  year={2010},
+  publisher={Springer}
+}
+
+@inproceedings{Vorobev2019filter,
+  title={Learning to select for a predefined ranking},
+  author={Vorobev, Aleksandr and Ustimenko, Aleksei and Gusev, Gleb and Serdyukov, Pavel},
+  booktitle={International Conference on Machine Learning (ICML'19)},
+  volume={},
+  pages={6477--6486},
+  year={2019},
+  organization={}
+}
+
+
+@article{zhang2015gradient,
+  title={A gradient boosting method to improve travel time prediction},
+  author={Zhang, Yanru and Haghani, Ali},
+  journal={Transportation Research Part C: Emerging Technologies},
+  volume={58},
+  pages={308--324},
+  year={2015},
+  publisher={Elsevier}
+}
+
