Update on Overleaf.

--- a/sigconf-kdd2020.tex
+++ b/sigconf-kdd2020.tex
@@ -404,13 +404,13 @@ Another observation is that a more complex sub-sequence generation strategy (e. 
 
 \begin{figure}[h]
   \caption{Embedding dimensionality vs. quality for age prediction task}
-  \includegraphics[width=0.46\textwidth]{figures/age-pred-hidden-size.png}
+  \includegraphics[width=0.46\textwidth]{figures/age-pred-hidden-size.pdf}
   \label{fig-emb-dim-age}
 \end{figure}
 
 \begin{figure}[h]
   \caption{Embedding dimensionality vs. quality for gender prediciton task}
-  \includegraphics[width=0.46\textwidth]{figures/gender-hidden-size.png}
+  \includegraphics[width=0.46\textwidth]{figures/gender-hidden-size.pdf}
   \label{fig-emb-dim-gender}
 \end{figure}
 
@@ -436,7 +436,7 @@ tSNE vectors from the age prediction dataset are presented in the Figure \ref{fi
 
 \begin{figure}[ht]
   \caption{2D tSNE mapping of MeLES embeddings trained on age prediction task dataset, colored by age group labels}
-  \includegraphics[width=0.46\textwidth]{figures/age-pred-tsne.png}
+  \includegraphics[width=0.46\textwidth]{figures/age-pred-tsne.pdf}
   \label{fig-tsne-age}
 \end{figure}
 
@@ -483,28 +483,28 @@ In figures \ref{fig-semi-age-0} and \ref{fig-semi-gender-0} we compare the quali
 
 \begin{figure}[h]
   \caption{Age group prediction task quality on features for different dataset sizes}
-  \includegraphics[width=0.46\textwidth]{figures/ss_age_0.png}
+  \includegraphics[width=0.46\textwidth]{figures/ss_age_0.pdf}
   \small{The rightmost point correspond to all labels and supervised setup. X-axis is shown on a logarithmic scale.}
   \label{fig-semi-age-0}
 \end{figure}
 
 \begin{figure}[h]
   \caption{Gender prediction task quality on features for different dataset sizes}
-  \includegraphics[width=0.46\textwidth]{figures/ss_gen_0.png}
+  \includegraphics[width=0.46\textwidth]{figures/ss_gen_0.pdf}
   \small{The rightmost point correspond to all labels and supervised setup. X-axis is shown on a logarithmic scale.}
   \label{fig-semi-gender-0}
 \end{figure}
 
 \begin{figure}[h]
   \caption{Age group prediction task quality of single model for different dataset sizes}
-  \includegraphics[width=0.46\textwidth]{figures/ss_age_1_wopl.png}
+  \includegraphics[width=0.46\textwidth]{figures/ss_age_1_wopl.pdf}
   \small{The rightmost point correspond to all labels and supervised setup. X-axis is shown on a logarithmic scale.}
   \label{fig-semi-age-1}
 \end{figure}
 
 \begin{figure}[h]
   \caption{Gender prediction task quality of single model for different dataset sizes}
-  \includegraphics[width=0.46\textwidth]{figures/ss_gen_1.png}
+  \includegraphics[width=0.46\textwidth]{figures/ss_gen_1.pdf}
   \small{The rightmost point correspond to all labels and supervised setup. X-axis is shown on a logarithmic scale.}
   \label{fig-semi-gender-1}
 \end{figure}
@@ -527,6 +527,6 @@ Another advantage of using event sequence based embeddings, instead of the raw e
 
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{sigconf}
+\bibliography{sigconf-kdd2020}
 
 \end{document}
