Update on Overleaf.

--- a/neurips2020.bib
+++ b/neurips2020.bib
@@ -98,7 +98,7 @@
 @article{Zhai2019LearningAU,
   title={Learning a Unified Embedding for Visual Search at Pinterest},
   author={Andrew Zhai and Hao-Yu Wu and Eric Tzeng and Dong Huk Park and Charles Rosenberg},
-  journal={Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  journal={Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
   year={2019}
 }
 
@@ -222,7 +222,7 @@
 @article{Babaev2019ETRNNAD,
   title={E.T.-RNN: Applying Deep Learning to Credit Loan Applications},
   author={Dmitrii Babaev and Maxim Savchenko and Alexander Tuzhilin and Dmitrii Umerenkov},
-  journal={Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  journal={Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
   year={2019}
 }
 
@@ -339,10 +339,11 @@
   year={2002}
 }
 
-@inproceedings{Maaten2008VisualizingDU,
+@article{Maaten2008VisualizingDU,
   title={Visualizing Data using t-SNE},
   author={Laurens van der Maaten and Geoffrey E. Hinton},
-  year={2008}
+  year={2008},
+  journal={Journal of machine learning research},
 }
 
 @article{Chopra2005LearningAS,
@@ -387,3 +388,25 @@
   pages={308-324}
 }
 
+@article{Sun2017RevisitingUE,
+  title={Revisiting Unreasonable Effectiveness of Data in Deep Learning Era},
+  author={Chen Sun and Abhinav Shrivastava and Saurabh Singh and Abhinav Gupta},
+  journal={2017 IEEE International Conference on Computer Vision (ICCV)},
+  year={2017},
+  pages={843-852}
+}
+
+@article{Ni2018PerceiveYU,
+  title={Perceive Your Users in Depth: Learning Universal User Representations from Multiple E-commerce Tasks},
+  author={Yabo Ni and Dan Ou and Shichen Liu and Xiang Li and Wenwu Ou and Anxiang Zeng and Luo Si},
+  journal={Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  year={2018}
+}
+
+@article{Chen2020ASF,
+  title={A Simple Framework for Contrastive Learning of Visual Representations},
+  author={Ting Chen and Simon Kornblith and Mohammad Norouzi and Geoffrey E. Hinton},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2002.05709}
+}
